--- a/ingresar/static/css/estilos.css
+++ b/ingresar/static/css/estilos.css
@@ -40,7 +40,7 @@ body{
 /* Estilos de la sección de abajo inicio */
 
 #seccion_finalinicio{
-    background: linear-gradient(0deg, rgba(255,255,255,0.49933476808692223) 0%, rgba(255,255,255,0.49933476808692223) 20%), url(./images/fondoInicio.jpg);
+    background: linear-gradient(0deg, rgba(255,255,255,0.49933476808692223) 0%, rgba(255,255,255,0.49933476808692223) 20%), url(./images/fondoprincipal.jpg);
     min-height: 80vh;
     background-size: cover;
     background-position: center;
