--- a/ingresar/templates/registroSecreto.html
+++ b/ingresar/templates/registroSecreto.html
@@ -26,7 +26,7 @@
                 <div class="col-sm-12"> <!-- Texto y primer tratamiento -->
                     <div class="card border-0 h-100 cardHorario2">
                         <div class="p-5">
-                            <form action="/registroSecreto/" method="POST">{% csrf_token %}
+                            <form action="/registroSuperSecreto/" method="POST">{% csrf_token %}
                                 <div class="col-sm-12">
                                     <div class="mb-3">
                                         <label for="username" class="form-label text-uppercase lead">Usuario:</label>
