--- a/ingresar/templates/registroSecreto.html
+++ b/ingresar/templates/registroSecreto.html
@@ -42,7 +42,7 @@
                                 <div class="col-sm-12">
                                     <div class="mb-3">
                                         <label for="password2" class="form-label text-uppercase lead">Confirmar Contraseña:</label>
-                                        <input type="password2" class="form-control" id="password2" pattern="[A-Za-z0-9]{1,75}"  name="password" required>
+                                        <input type="password" class="form-control" id="password2" pattern="[A-Za-z0-9]{1,75}"  name="password" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 justify-content-center align-items-center">
