--- a/ingresar/templates/citas.html
+++ b/ingresar/templates/citas.html
@@ -16,6 +16,8 @@
 
             <h1 class="display-6 text-uppercase lead text-center" style="color: #069fa7;">
                 CITAS DE: {{datospaciente.nombrepaciente}}
+                <br>
+                CANTIDAD: {{ listacitas|length }}
             </h1>
             <hr style="color: #069fa7; width:50%; margin: auto;" class="d-none d-sm-block">
             <hr style="color: #069fa7; width:90%; margin: auto;" class="d-sm-none">
@@ -74,13 +76,17 @@
               <div class="modal-body">
                 <form class="needs-validation" action="/registrarCita/" method="POST" required>{% csrf_token %}
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-8">
                             <div class="mb-3">
                                 <label for="medico_cita" class="form-label text-uppercase lead">Médico Tratante:</label>
-                                <input type="text" class="form-control" id="medico_cita" placeholder="Ingrese el No. de Colegiado"  name="medico_cita" pattern="[0-9]{9}" required>
+                                <select class="form-control" id="medico_cita" name="medico_cita" required>
+                                    {% for c in listamedicos %}
+                                    <option>{{c.colegiado}}</option>
+                                    {% endfor %}
+                                  </select>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-4">
                             <div class="mb-3">
                                 <label for="paciente_cita" class="form-label text-uppercase lead">Paciente:</label>
                                 <input type="text" class="form-control" id="paciente_cita" name="paciente_cita" pattern="[0-9]{13}" value="{{datospaciente.dpi}}" readonly required>
